@@ -1,3 +1,7 @@
+2016-12-09 Hanna Knutsson <hanna_k@fmgirl.com>
+
+	* Replace deprecated gtk_menu_popup with gtk_menu_popup_at_pointer for gtk >= 3.22
+
 2016-10-24 Hanna Knutsson <hanna_k@fmgirl.com>
 
 	* Fix STO button tooltip
